--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
         .card:nth-child(3) { animation-delay: 0.4s; }
         .card:nth-child(4) { animation-delay: 0.6s; }
         .card:nth-child(5) { animation-delay: 0.8s; }
-        .card:nth-child(6) { animation-delay: 1s; }
-        .card:nth-child(7) { animation-delay: 1.2s; }
+        .card:nth-child(6) { animation-delay: 0.8s; }
+        .card:nth-child(7) { animation-delay: 0.8s; }
 
         .card-header {
             font-family: 'Playfair Display', serif;
@@ -442,7 +442,7 @@
                 // First reject - sad crying cat
                 threatMessage.innerHTML = `
                     <div class="threat-message">
-                        <span class="threat-emoji"><img src="https://media.tenor.com/ikTQ-pi_GyMAAAAi/cat-cry-kitten-cry.gif" alt="😿"  width="400" height="300"></span>
+                        <span class="threat-emoji"><img src="https://media.tenor.com/ikTQ-pi_GyMAAAAi/cat-cry-kitten-cry.gif" alt="😿"  width="auto" height="300"></span>
                         <p style="font-size: 20px; color: var(--text-primary); font-weight: 600;">
                             Oh no... really? 🥺
                         </p>
@@ -461,7 +461,7 @@
                 // Second reject - cat with gun and cute threat
                 threatMessage.innerHTML = `
                     <div class="threat-message">
-                        <span class="threat-emoji"><img src="https://media1.tenor.com/m/vU85vGSqDqwAAAAC/uhh-cat.gif" alt="😾 🔫"  width="400" height="300"></span>
+                        <span class="threat-emoji"><img src="https://media1.tenor.com/m/vU85vGSqDqwAAAAC/uhh-cat.gif" alt="😾 🔫"  width="auto" height="300"></span>
                         <p style="font-size: 20px; color: var(--text-primary); font-weight: 600;">
                             Okay, this is getting serious! 
                         </p>
@@ -485,7 +485,7 @@
                 // Third reject - no more options, disable reject button
                 threatMessage.innerHTML = `
                     <div class="threat-message">
-                        <span class="threat-emoji"><img src="https://media1.tenor.com/m/S8Vv6-uLUA0AAAAd/cute-cat.gif" alt="😤"  ></span>
+                        <span class="threat-emoji"><img src="https://media1.tenor.com/m/S8Vv6-uLUA0AAAAd/cute-cat.gif" alt="😤" width="auto" height="300" ></span>
                         <p style="font-size: 22px; color: var(--text-primary); font-weight: 700;">
                             Okay, that's it! 
                         </p>
