--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
         }
 
         .card:nth-child(2) { animation-delay: 0.2s; }
-        .card:nth-child(3) { animation-delay: 0.4s; }
-        .card:nth-child(4) { animation-delay: 0.6s; }
-        .card:nth-child(5) { animation-delay: 0.8s; }
-        .card:nth-child(6) { animation-delay: 0.8s; }
-        .card:nth-child(7) { animation-delay: 0.8s; }
+        .card:nth-child(3) { animation-delay: 0.2s; }
+        .card:nth-child(4) { animation-delay: 0.2s; }
+        .card:nth-child(5) { animation-delay: 0.2s; }
+        .card:nth-child(6) { animation-delay: 0.2s; }
+        .card:nth-child(7) { animation-delay: 0.2s; }
 
         .card-header {
             font-family: 'Playfair Display', serif;
@@ -385,7 +385,7 @@
                     <p style="margin-top: 10px;">Prognosis: Extremely good.</p>
                     <p>Thank you,  Doctor Saba <span class="heart-icon">❤️</span></p>
                     <p class="card-content" style="margin-top: 15px;">I can't wait to spend the rest of my life with you sweety, my love, my princess, my darling, girl of my dreams!!</p>
-                    <p style="margin-top: 30px; font-size: 28px;"><img  src="pic.jpg" alt="🎉 💕 ✨" width="400" height="450"></p>
+                    <p style="margin-top: 30px; font-size: 28px;"><img  src="pic.jpg" alt="🎉 💕 ✨" width="100%" height="auto"  object-fit="contain"></p>
                     <p style="margin-top: 20px; font-size: 16px; color: var(--text-secondary);">
                         Thank you Allah, I am really grateful to have found you sweety!
                     </p>
@@ -442,7 +442,7 @@
                 // First reject - sad crying cat
                 threatMessage.innerHTML = `
                     <div class="threat-message">
-                        <span class="threat-emoji"><img src="https://media.tenor.com/ikTQ-pi_GyMAAAAi/cat-cry-kitten-cry.gif" alt="😿"  width="auto" height="300"></span>
+                        <span class="threat-emoji"><img src="https://media.tenor.com/ikTQ-pi_GyMAAAAi/cat-cry-kitten-cry.gif" alt="😿" width="100%" height="auto"  object-fit="contain"></span>
                         <p style="font-size: 20px; color: var(--text-primary); font-weight: 600;">
                             Oh no... really? 🥺
                         </p>
@@ -461,7 +461,7 @@
                 // Second reject - cat with gun and cute threat
                 threatMessage.innerHTML = `
                     <div class="threat-message">
-                        <span class="threat-emoji"><img src="https://media1.tenor.com/m/vU85vGSqDqwAAAAC/uhh-cat.gif" alt="😾 🔫"  width="auto" height="300"></span>
+                        <span class="threat-emoji"><img src="https://media1.tenor.com/m/vU85vGSqDqwAAAAC/uhh-cat.gif" alt="😾 🔫"  width="100%" height="auto"   object-fit="contain"></span>
                         <p style="font-size: 20px; color: var(--text-primary); font-weight: 600;">
                             Okay, this is getting serious! 
                         </p>
@@ -485,7 +485,7 @@
                 // Third reject - no more options, disable reject button
                 threatMessage.innerHTML = `
                     <div class="threat-message">
-                        <span class="threat-emoji"><img src="https://media1.tenor.com/m/S8Vv6-uLUA0AAAAd/cute-cat.gif" alt="😤" width="auto" height="300" ></span>
+                        <span class="threat-emoji"><img src="https://media1.tenor.com/m/S8Vv6-uLUA0AAAAd/cute-cat.gif" alt="😤" width="100%" height="auto"  object-fit="contain" ></span>
                         <p style="font-size: 22px; color: var(--text-primary); font-weight: 700;">
                             Okay, that's it! 
                         </p>
